--- a/www/index.html
+++ b/www/index.html
@@ -3,36 +3,65 @@
 
 <head>
 <title>Music Controls</title>
+<meta name="viewport" content="width=device-width, user-scalable=no">
 <link rel="stylesheet" type="text/css" href="style.css" />
+<script src="/socket.io/socket.io.js"></script>
 <script type="text/javascript" src="controls.js"></script>
 </head>
 <body>
-  <div class="control_button" onClick="controlPressed('stop')" >
-    <img src="img/stop.png" />
+  <div class="changing_title" id="current_song">
+	...
+  </div>
+  <div class="changing_title_base"></div>
+  <div class="button_row">
+	<div class="control_button third" onClick="controlPressed('stop')" >
+      <img src="img/stop.png" />
+	</div>
+
+	<div class="control_button third" onClick="controlPressed('play')" >
+      <img src="img/play.png" />
+	</div>
+
+	<div class="control_button third" onClick="controlPressed('next')" >
+      <img src="img/next.png" />
+	</div>
   </div>
 
-  <div class="control_button" onClick="controlPressed('play')" >
-    <img src="img/play.png" />
+  <div class="spacer"></div>
+
+  <div class="static_title">
+	volume
+  </div>
+  <div class="button_row">
+	<div class="control_button third" onClick="controlPressed('minus')" >
+      <img src="img/minus.png" />
+	</div>
+
+	<div class="control_button third" onClick="controlPressed('mute')" >
+      <img src="img/volume_normal.png" />
+	</div>
+
+	<div class="control_button third" onClick="controlPressed('plus')" >
+      <img src="img/plus.png" />
+	</div>
   </div>
 
-  <div class="control_button" onClick="controlPressed('next')" >
-    <img src="img/next.png" />
+  <div class="spacer"></div>
+
+  <div class="static_title">
+	timers
+  </div>
+  <div class="button_row">
+	<div class="control_button half" onClick="openDialog('shutdown')" >
+      <img src="img/shutdown.png" />
+	</div>
+
+	<div class="control_button half" onClick="openDialog('alarm')" >
+      <img src="img/alarm.png" />
+	</div>
   </div>
 
-  <div class="control_button new_row" onClick="controlPressed('minus')" >
-    <img src="img/minus.png" />
-  </div>
-
-  <div class="control_button" onClick="controlPressed('mute')" >
-    <img src="img/mute.png" />
-  </div>
-
-  <div class="control_button" onClick="controlPressed('plus')" >
-    <img src="img/plus.png" />
-  </div>
-
-  <div class="control_button" id="shutdown" onClick="controlPressed('shutdown')" >
-    SHUTDOWN
-  </div>
+  <div class="spacer"></div>
+  <div style="height:64px;"></div>
 </body>
 </html>
